# discord-screenaudio

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  install.sh  resources.qrc  resources.qrc.license  version  version.cmake
.github/workflows/: test.yml
assets/: arrpc.js  arrpc_bridge_mod.js  de.shorsh.discord-screenaudio.desktop  de.shorsh.discord-screenaudio.metainfo.xml  de.shorsh.discord-screenaudio.metainfo.xml.in  de.shorsh.discord-screenaudio.png.license  discord-screenaudio.desktop  discord-screenaudio.notifyrc  polyfills.js  style.css  userscript.js  vencord.js
assets/arrpc/: arrpc.js.license  arrpc_bridge_mod.js
assets/vencord/: VencordNativeStub.ts  disable-plugins.patch  plugin.js  settings.patch  vencord.css  vencord.css.license  vencord.js  version.txt
scripts/: Dockerfile  build-appimage.sh  build_arrpc.sh  build_vencord.sh  install.sh  prepare-container.sh
src/: c_tools.c  c_tools.h  centralwidget.cpp  centralwidget.h  dependencycheck.cpp  dependencycheck.h  discordpage.cpp  discordpage.h  localserver.cpp  localserver.h  log.cpp  log.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mediapicker.cpp  mediapicker.h  streamdialog.cpp  streamdialog.h  userscript.cpp  userscript.h  utils.cpp  utils.h  virtmic.cpp  virtmic.h  webclass.cpp  webclass.h
